Implement transaction
