# api/routes.go
@@ -14,7 +14,13 @@ const (
 	apiV1 = "/api/v1"
 )
 
-func SetupRoutes(r *gin.Engine, userController *controller.UserController, userService *user_service.UserService, financialOverviewController *controller.FinancialOverviewController) {
+func SetupRoutes(
+	r *gin.Engine,
+	userController *controller.UserController,
+	userService *user_service.UserService,
+	financialOverviewController *controller.FinancialOverviewController,
+	transactionController *controller.TransactionController,
+) {
 	// Initialize UserHandler
 	verifyUserEmailHandler := handlers.NewUserHandler(userService)
 
@@ -44,9 +50,12 @@ func SetupRoutes(r *gin.Engine, userController *controller.UserController, userS
 			authorized.DELETE("/users/:id", userController.DeleteUser)
 			authorized.GET("/users", userController.GetAllUsers)
 			authorized.PUT("/users/:id", userController.UpdateUser)
-
-			// Financial overview routes
 			authorized.GET("/users/:id/financial-overview", financialOverviewController.GetUserFinancialOverview)
+
+			// Transaction routes
+			authorized.POST("/deposit", transactionController.Deposit)
+			authorized.POST("/withdraw", transactionController.Withdraw)
+			authorized.POST("/transfer", transactionController.Transfer)
 		}
 	}
 }
