# docs/swagger.yaml
@@ -3,6 +3,59 @@ definitions:
   gin.H:
     additionalProperties: {}
     type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
+  models.Transaction:
+    properties:
+      accountID:
+        type: string
+      amount:
+        type: number
+      category:
+        type: string
+      createdAt:
+        type: string
+      currency:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      description:
+        type: string
+      id:
+        type: string
+      status:
+        type: string
+      timestamp:
+        type: string
+      type:
+        $ref: '#/definitions/models.TransactionType'
+      updatedAt:
+        type: string
+      userID:
+        type: string
+    type: object
+  models.TransactionType:
+    enum:
+    - DEPOSIT
+    - WITHDRAWAL
+    - TRANSFER
+    - PAYMENT_SENT
+    - PAYMENT_RECEIVED
+    - FEE_CHARGED
+    type: string
+    x-enum-varnames:
+    - Deposit
+    - Withdrawal
+    - Transfer
+    - PaymentSent
+    - PaymentReceived
+    - FeeCharged
   request.ChangePasswordRequestDto:
     properties:
       current_password:
@@ -13,6 +66,26 @@ definitions:
     required:
     - current_password
     - new_password
+    type: object
+  request.DepositRequest:
+    properties:
+      accountId:
+        type: string
+      amount:
+        type: number
+      category:
+        type: string
+      currency:
+        type: string
+      description:
+        type: string
+      userId:
+        type: string
+    required:
+    - accountId
+    - amount
+    - currency
+    - userId
     type: object
   request.ForgotPasswordRequestDto:
     properties:
@@ -31,6 +104,36 @@ definitions:
     required:
     - new_password
     - token
+    type: object
+  request.TransferRequest:
+    properties:
+      amount:
+        type: number
+      category:
+        type: string
+      currency:
+        type: string
+      description:
+        type: string
+      fromAccountId:
+        type: string
+      toAccountId:
+        type: string
+      userId:
+        type: string
+    required:
+    - amount
+    - currency
+    - fromAccountId
+    - toAccountId
+    - userId
+    type: object
+  request.TransferResponse:
+    properties:
+      fromTransaction:
+        $ref: '#/definitions/models.Transaction'
+      toTransaction:
+        $ref: '#/definitions/models.Transaction'
     type: object
   request.UpdateUserRequestDto:
     properties:
@@ -98,6 +201,26 @@ definitions:
     - password
     - phoneNumber
     - riskTolerance
+    type: object
+  request.WithdrawRequest:
+    properties:
+      accountId:
+        type: string
+      amount:
+        type: number
+      category:
+        type: string
+      currency:
+        type: string
+      description:
+        type: string
+      userId:
+        type: string
+    required:
+    - accountId
+    - amount
+    - currency
+    - userId
     type: object
   response.AccountResponseDto:
     properties:
@@ -188,6 +311,29 @@ definitions:
     - ManagerRole
     - EmployeeRole
     - CustomerRole
+  response.TransactionResponseDto:
+    properties:
+      accountId:
+        type: string
+      amount:
+        type: number
+      category:
+        type: string
+      currency:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      status:
+        type: string
+      timestamp:
+        type: string
+      type:
+        type: string
+      userId:
+        type: string
+    type: object
   response.UserLoginResponseDto:
     properties:
       accessToken:
@@ -474,6 +620,123 @@ paths:
       summary: Reset user's password
       tags:
       - users
+  /transactions/deposit:
+    post:
+      consumes:
+      - application/json
+      description: Deposit funds into a user's account
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Deposit request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.DepositRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.TransactionResponseDto'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Deposit funds
+      tags:
+      - transactions
+  /transactions/transfer:
+    post:
+      consumes:
+      - application/json
+      description: Transfer funds between two accounts
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Transfer request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.TransferRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/request.TransferResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Transfer funds
+      tags:
+      - transactions
+  /transactions/withdraw:
+    post:
+      consumes:
+      - application/json
+      description: Withdraw funds from a user's account
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Withdraw request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.WithdrawRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.TransactionResponseDto'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Withdraw funds
+      tags:
+      - transactions
   /users:
     get:
       consumes:
